Resource allocation/commitment

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -40,7 +40,7 @@
 follows. Section 1 introduces . . . ”.}
 \subsection{Objectives}
 \outline{\proposalV{Investigate the performance changes between DynCNET/confirmation and CNET. (bijbehorende question: what is the relative performance of cnet, confirmation and dyncnet)}}
-The objective of this paper is to compare 2 extensions of Contract Net (CNET)\cite{CNETStandard,CNET}, namely Contract Net with Confirmation Protocol (CNCP)\cite{CNCP} and Dynamic Contract Net (DynCNET)\cite{DynCNET} to CNET itself. \commentV{extensions should be measurable \proposalV{to investigate whether these two extensions (CNCP/DynCNET) are an improvement on CNET\commentY{akkoord}} }
+The objective of this paper is to investigate whether two extensions of Contract Net (CNET)\cite{CNETStandard,CNET}, namely Contract Net with Confirmation Protocol (CNCP)\cite{CNCP} and Dynamic Contract Net (DynCNET)\cite{DynCNET} are an improvement on CNET itself. \commentV{extensions should be measurable \proposalV{to investigate whether these two extensions (CNCP/DynCNET) are an improvement on CNET\commentY{akkoord}} }
 
 We do this in a drone delivery setting where all agents (both the drones and the clients) try to maximize (locally) the profit for the company. Drones can fail and are constrained by their batteries. The company needs to pay a fine for every client that is not delivered in time. The drones can pick up the packages in multiple warehouses (with infinite stock), each with a different price per package. Drones cannot collide with each other.
 \commentY{De setting moet nog serieus herschreven worden, bovenstaand stukje is niet duidelijk. Zeker in vergelijking met sectie 2: Context van de opgave.\proposalV{We do this in a drone delivery setting where a company owns a fleet of drones that receives orders from clients, collects the ordered parcel at one of several warehouses and delivers them to that client. The drones autonomously receive, process and deliver the client orders. The goal is to maximize the company's profit, by having the most suitable drone serve each order. Clients have a time limit for their deliveries, after which the company needs to pay a fine.  Drones can break down and are constrained by their batteries. Drones cannot collide with each other.\commentY{Al een pak beter. nog paar kleine dingen: - parcel of package: moeten 1 term gebruiken voor heel het document, denk ik. - Niets over waar opladen?}}}
@@ -97,19 +97,19 @@ A manager initiates the contract negotiation process by adversiting that task wi
 
 Whenever a task announcement arrives at an agent that wants to act as a contractor, all of these parts of the announcement allow contractors to decide whether and when to submit a bid. They add the announcement to a list of received and not expired announcements if they're eligible. The announcements in the list are ranked on interest to the agent. This ranking is a task-specific operation and is based on the information contained within the task announcement.
 
-A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task anouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it is bound to that task. This is also called early commitment. This means that it cannot bid on other tasks and already allocates its resources to that task. Only when the task expires and no message is received that the contract has been awarded, can the agent release its resources and bid on other tasks. This is done to avoid multiple task awards to one agent, which would need to be queued and would slow down the system performance. It does mean idle agents are 'blocked' until their bid is rejected, but this is reduced by allowing bids and awards before the expiration time. \commentV{klopt dit? staat precies wel in de paper maar klinkt zo raar (vooral: agents die niet awarded worden moeten toch wel nog tot expiration wachten -- zie ook FIPA) \commentY{Nee, Contract Net laat dit wel toe. Alleen moogt ge niet op 1 tijdstip 2 bids uitsturen. Ge moogt wel een tijdstip later bieden als ge dan nog altijd geen contract hebt. Zie sectie IV.A.6:Negotiation Tradeoffs dat gaat hierover}}
+A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task anouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. \proposalV{Whenever an agent submits a bid to a task, it allocates some resources to that task. This is called early commitment. That agent can then not bid on other tasks at the same moment. This is done to avoid multiple task awards to one agent, which would need to be queued and would slow down the system performance.}
 
-Bids arrive at the manager and are also ranked and stored in a list until the task can be awarded. The manager can either award a contract immediately if a satisfactory bid arrives (even before the expiration time) or wait for further bids. When the task expires\commentY{Task expiret niet, de task announcement eerder}, it can either award the contract to the best bidder in its list or advertise the task again \proposalY{later on}. The task is therefore not necessarily awarded when it expires. If a manager awards a contract, it sends a message to the winning contractor, who can start executing the task. When the contractor is finished, it sends a report to the manager with the results of the execution.
+Bids arrive at the manager and are also ranked and stored in a list until the task can be awarded. The manager can either award a contract immediately if a satisfactory bid arrives (even before the expiration time) or wait for further bids. When the task announcement expires, it can either award the contract to the best bidder in its list or advertise the task again (immediately or after waiting some time). The task is therefore not necessarily awarded when it expires. If a manager awards a contract, it sends a message to the winning contractor, who can start executing the task. When the contractor is finished, it sends a report to the manager with the results of the execution.
 
 The bidding process can be extended to allow agents that cannot or do not want to bid to respond immediately with their reason why they will not bid. Managers can then delay task announcements if no agent is ready to take up the task. An agent can respond immediately if they are ineligible, busy or give the task a low ranking. The manager can then avoid simply reissuing the task announcement when it expires, but can loosen the eligibility requirements if all agents are ineligible or wait before reissuing the task announcement if all agents are busy or not interested yet in the task.
 
-The FIPA version of the Contract Net Protocol \cite{CNETStandard} differs from the original protocol by adding acceptance and rejection of a bid by a manager. This means a contractor is notified if its bid was rejected, which means it does not have to wait until the task expires to continue bidding on other tasks.
-\commentY{laatste bijzin weg, komt nog uit foute interpretatie van CNET}
+The FIPA version of the Contract Net Protocol \cite{CNETStandard} differs from the original protocol by adding acceptance and rejection of a bid by a manager. This means a contractor is notified if its bid was rejected.
+
 
 \subsection{Contract Net with Confirmation} 
 The Contract Net With Confirmation Protocol, or CNCP, was conceived as an extension to the Contract Net Protocol by Knabe et al. in 2002. \cite{CNCP}
 
-The major shortcoming of CNET that CNCP tries to address is the early commitment by agents. If multiple managers announce a task, a contractor is only allowed to bid on one of the tasks and must then allocate its resources to that task and cannot bid on other tasks, even though it might not be awarded the task. 
+The major shortcoming of CNET that CNCP tries to address is the early commitment by agents. \proposalV{If multiple managers announce a task at the same time, a contractor is only allowed to bid on one of these tasks, after which it already allocates some resources to that task. The agent will choose the task that seems most interesting at that time. The problem is that if a task is somehow very popular, many agents would bid on it but only one would be awarded the task. The other agents then have to wait for task announcements in the next moment to restart the bidding process and try to receive a task. Furthermore the agent has allocated some resources to that popular task, which possibly are only freed after the task announcement expires. This means the agent has less available resources to bid on other tasks later on.}
 \commentY{Deels terug die foute interpretatie CNET. Early commitment is wel juist. Biedingen op andere tasks moeten rekening houden met het feit dat er minder resources zijn want een deel is al toegekend aan bids die uitstaan (en die soms pas tegen expiration time een antwoord krijgen)}
 
 To resolve this issue, in the CNCP the full commitment to a task is moved to the awarding phase: if a contractor is awarded a task, only then does it allocate its resources and stop bidding on other tasks. While a bid has been submitted but the task has not been awarded yet, the contractor can continue bidding on other tasks. When a manager wants to award a task to a contractor, it first contacts that contractor with the request to accept the task. This contractor may however already been awarded a different task, in which case it will refuse the task. The manager may then try to award the task the next best contractor. This either continues until a contractor accepts the task, in which case the contractor can start executing the task and the manager can send a rejection message to the other bidders, or if no contractor accepts it, the manager can announce the task again (possibly after waiting some time).
