Finalize proposals for theory section

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -97,7 +97,7 @@ A manager initiates the contract negotiation process by adversiting that task wi
 
 Whenever a task announcement arrives at an agent that wants to act as a contractor, all of these parts of the announcement allow contractors to decide whether and when to submit a bid. They add the announcement to a list of received and not expired announcements if they're eligible. The announcements in the list are ranked on interest to the agent. This ranking is a task-specific operation and is based on the information contained within the task announcement.
 
-A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task anouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. \proposalV{Whenever an agent submits a bid to a task, it allocates some resources to that task. This is called early commitment. That agent can then not bid on other tasks at the same moment. This is done to avoid too many task awards to one agent, which would all need to be queued and would slow down the system performance by putting too much load on one agent, which means tasks get executed later.}
+A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task anouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it allocates some resources to that task. This is called early commitment. That agent can then not bid on other tasks at the same moment. This is done to avoid too many task awards to one agent, which would all need to be queued and would slow down the system performance by putting too much load on one agent, which means tasks get executed later.
 
 Bids arrive at the manager and are also ranked and stored in a list until the task can be awarded. The manager can either award a contract immediately if a satisfactory bid arrives (even before the expiration time) or wait for further bids. When the task announcement expires, it can either award the contract to the best bidder in its list or advertise the task again (immediately or after waiting some time). The task is therefore not necessarily awarded when it expires. If a manager awards a contract, it sends a message to the winning contractor, who can start executing the task. When the contractor is finished, it sends a report to the manager with the results of the execution.
 
@@ -108,8 +108,7 @@ The FIPA version of the Contract Net Protocol \cite{CNETStandard} differs from t
 \subsection{Contract Net with Confirmation} 
 The Contract Net With Confirmation Protocol, or CNCP, was conceived as an extension to the Contract Net Protocol by Knabe et al. in 2002. \cite{CNCP}
 
-The major shortcoming of CNET that CNCP tries to address is the early commitment by agents. \proposalV{If multiple managers announce a task at the same time, a contractor is only allowed to bid on one of these tasks, after which it already allocates some resources to that task. The agent will choose the task that seems most interesting at that time. The problem is that if a task is somehow very popular, many agents would bid on it but only one would be awarded the task. The other agents then have to wait for the next opportunity to restart the bidding process and try to receive a task. Furthermore the agent has allocated some resources to that popular task, which possibly are only freed after the task announcement expires. This means the agent has less available resources to bid on other tasks later on.}
-\commentY{Deels terug die foute interpretatie CNET. Early commitment is wel juist. Biedingen op andere tasks moeten rekening houden met het feit dat er minder resources zijn want een deel is al toegekend aan bids die uitstaan (en die soms pas tegen expiration time een antwoord krijgen)}
+The major shortcoming of CNET that CNCP tries to address is the early commitment by agents. If multiple managers announce a task at the same time, a contractor is only allowed to bid on one of these tasks, after which it already allocates some resources to that task. The agent will choose the task that seems most interesting at that time. The problem is that if a task is somehow very popular, many agents would bid on it but only one would be awarded the task. The other agents then have to wait for the next opportunity to restart the bidding process and try to receive a task. Furthermore the agent has allocated some resources to that popular task, which possibly are only freed after the task announcement expires. This means the agent has less available resources to bid on other tasks later on.
 
 To resolve this issue, in the CNCP the full commitment to a task is moved to the awarding phase: if a contractor is awarded a task, only then does it allocate its resources and stop bidding on other tasks. While a bid has been submitted but the task has not been awarded yet, the contractor can continue bidding on other tasks. When a manager wants to award a task to a contractor, it first contacts that contractor with the request to accept the task. This contractor may however already been awarded a different task, in which case it will refuse the task. The manager may then try to award the task the next best contractor. This either continues until a contractor accepts the task, in which case the contractor can start executing the task and the manager can send a rejection message to the other bidders, or if no contractor accepts it, the manager can announce the task again (possibly after waiting some time).
 
