Some small stuff

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -30,18 +30,17 @@
 \begin{document}
 \maketitle
 
-\commentY{In 2 kolommen? => geeft wel ander aantal pagina's, dus opletten met theorie sectie dan. Maar in mijn ogen is het wel een pak beter\commentV{In finaal verslag: ja - veel beter; in werkdocument zou ik het afzetten zodat we een goed idee hebben van de lengte}}
+\taskS{2 kolommen}
 
-\section{Introduction}
 \commentV{Zie https://bitbucket.org/VictorLP/mas/wiki/Notities\commentY{Normaal staan alle comments van de wiki in het verslag nu}}
-\commentV{The last paragraph of the introduction traditionally says “This report is organised as
+\section{Introduction}
+\outline{Bevat waarom verslag moet lezen (samen met conclusie 1 geheel). The last paragraph of the introduction traditionally says “This report is organised as
 follows. Section 1 introduces . . . ”.}
 \subsection{Objectives}
-\outline{\proposalV{Investigate the performance changes between DynCNET/confirmation and CNET. (bijbehorende question: what is the relative performance of cnet, confirmation and dyncnet)\commentY{Done?}}}
+\outline{\proposalV{Investigate the performance changes between DynCNET/confirmation and CNET. (bijbehorende question: what is the relative performance of cnet, confirmation and dyncnet)\commentY{Voor mij is dit klaar}}}
 The objective of this paper is to investigate whether two extensions of Contract Net (CNET)\cite{CNETStandard,CNET}, namely Contract Net with Confirmation Protocol (CNCP)\cite{CNCP} and Dynamic Contract Net (DynCNET)\cite{DynCNET} are an improvement on CNET itself.
 
-We do this in a drone delivery setting where all agents (both the drones and the clients) try to maximize (locally) the profit for the company. Drones can fail and are constrained by their batteries. The company needs to pay a fine for every client that is not delivered in time. The drones can pick up the packages in multiple warehouses (with infinite stock), each with a different price per package. Drones cannot collide with each other.
-\commentY{De setting moet nog serieus herschreven worden, bovenstaand stukje is niet duidelijk. Zeker in vergelijking met sectie 2: Context van de opgave.\proposalV{We do this in a drone delivery setting where a company owns a fleet of drones that receives orders from clients, collects the ordered parcel at one of several warehouses and delivers them to that client. The drones autonomously receive, process and deliver the client orders. The goal is to maximize the company's profit, by having the most suitable drone serve each order. Clients have a time limit for their deliveries, after which the company needs to pay a fine.  Drones can break down and are constrained by their batteries. Drones cannot collide with each other.\commentY{Al een pak beter. nog paar kleine dingen: - parcel of package: moeten 1 term gebruiken voor heel het document, denk ik. - Niets over waar opladen?}}}
+We do this in a drone delivery setting where a company owns a fleet of drones that receives orders from clients, collects the ordered parcel at one of several warehouses and delivers them to that client. The drones autonomously receive, process and deliver the client orders. The goal is to maximize the company's profit, by having the most suitable drone serve each order. Clients have a time limit for their deliveries, after which the company needs to pay a fine.  Drones can break down and are constrained by their batteries. Drones cannot collide with each other.\commentY{Al een pak beter. nog paar kleine dingen: - parcel of package: moeten 1 term gebruiken voor heel het document, denk ik. - Niets over waar opladen?}
 
 We investigate whether any of the aforementioned protocols are suited for a drone company to be profitable in the described setting. We will also check the influence of the number of drones, clients and warehouses on the profit the company can make.
 \subsection{Hypotheses}
@@ -71,7 +70,7 @@ We expect the profit to scale with the number of warehouses. As more warehouses 
 We expect the profit to rise until the fines of not delivering start to become too large.
 \end{itemize}
 
-\outline{In profit: DynCNET better than Confirmation better than CNET \\ In messages: CNET better than confirmation better than DynCNET\commentY{Done?}}
+\outline{In profit: DynCNET better than Confirmation better than CNET \\ In messages: CNET better than confirmation better than DynCNET\commentY{Voor mij is dit klaar}}
 
 \section{Theory}
 \outline{Theoretische uiteenzetting van wat in de drie relevante papers staat\commentY{Voor mij is dit klaar}}
@@ -128,7 +127,7 @@ The synchronization between managers and contractor to assess their current stat
 
 \commentY{Add sequence diagrams of 3 protocols???}
 
-\subsection{Agent FSM's} 
+\subsubsection{Agent FSM's} 
 \commentV{waar moet dit best komen?\proposalY{Ik zou het er nu misschien zelfs uitlaten. Daarvoor was het ook deels nodig om aan onze 3 pagina's te komen. Dus bij design eventueel wel nog FSM's zetten, maar zeker niet "Agent Architecture" erbij zetten.}}
 Both the drone and client agents have very simple architectures. They can be modeled using simple finite state machines.
 
