Analyze grid2 voor hypothese 8

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -44,7 +44,7 @@ We do this in a drone delivery setting where a company owns a fleet of drones th
 We investigate whether any of the aforementioned protocols are suited for a drone company to be profitable in the described setting. We will also check the influence of the number of drones, clients and warehouses on the profit the company can make.
 \subsection{Hypotheses}
 We formulate the following questions and provide our hypotheses for the answers to them.
-\begin{itemize}
+\begin{enumerate}
 \item \textit{Is there a difference between CNET, CNCP and DynCNET in the profit the company can make?} \\
 We expect that the company can make more profit using DynCNET than using CNCP, which should be more profitable than CNET.
 \item\textit{Is there a difference in average delivery time between CNET, CNCP and DynCNET?} \\
@@ -67,7 +67,7 @@ We expect the profit to scale with the number of warehouses. As more warehouses 
 
 \item\textit{What is the influence of the number of clients on the profit?}\\
 We expect the profit to rise until there are too many clients, after which the fines of not delivering start to become too large.
-\end{itemize}
+\end{enumerate}
 
 \section{Theory}
 
@@ -236,6 +236,7 @@ It is important to note, that in our design, bids are satisfactory if the expect
 nakijken of we die allemaal hebben}
 \commentY{Ook http://www.fipa.org/specs/fipa00037/SC00037J.html als referentie voor de ACL acts?}
 
+\taskS{Reference voor Games-Howell statistische test. \proposalY{http://stats.stackexchange.com/questions/38207/what-are-the-assumptions-of-the-games-howell-multiple-comparisons-procedure, Games, P. A., Keselman, H. J., \& Clinch, J. J. Tests for homogeneity of variance in factorial designs. Psychological Bulletin, 86, 978-984, maar kan hem niet vinden}}
 \bibliographystyle{plain}
 \bibliography{report}
 
